tests/front_end/input/variable_use_analysis/errors/variable_not_found.wl
//E<3:12>: Variable `zero` not found
int main() {
    return zero;
}
